Support long namepsaces, stream names, field names in catalog diff * Add overflow-ellipsis mixin * Fix heading margins * Improve column rendering * Use design error instead of fontawesome

--- a/airbyte-webapp/src/components/connection/CatalogDiffModal/DiffSection.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogDiffModal/DiffSection.module.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0 variables.$spacing-md 0 variables.$spacing-2xl;
+  padding: 0 variables.$spacing-lg;
   width: 100%;
   height: 22px;
 
@@ -28,6 +28,14 @@
     font-size: 10px;
     color: colors.$grey;
     line-height: 12px;
+  }
+
+  & .namespaceHeader {
+    padding-left: 25px;
+  }
+
+  & .nameHeader {
+    padding-left: variables.$spacing-md;
   }
 }
 
