--- a/airbyte-webapp/src/components/connection/CatalogDiffModal/FieldRow.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogDiffModal/FieldRow.module.scss
@@ -1,5 +1,6 @@
-@use "scss/variables";
 @use "scss/colors";
+@use "scss/mixins";
+@use "scss/variables";
 
 .row {
   display: flex;
@@ -59,12 +60,26 @@ tr:last-child .content {
   margin: 0 variables.$spacing-md;
 }
 
-.cell.update .dataType {
-  background-color: rgba(98, 94, 255, 10%);
-  padding: variables.$spacing-sm;
-  border-radius: variables.$border-radius-xs;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: variables.$spacing-sm;
+.fieldName {
+  @include mixins.overflow-ellipsis;
+
+  :not(.withType) & {
+    max-width: 470px;
+  }
+
+  .withType & {
+    max-width: 200px;
+  }
+}
+
+.cell {
+  &.update .dataType {
+    background-color: rgba(98, 94, 255, 10%);
+    padding: variables.$spacing-sm;
+    border-radius: variables.$border-radius-xs;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: variables.$spacing-sm;
+  }
 }
